# HeatSight

./: .gitignore  capture.py  concept.md  demo_dual_capture.py  dual_viewer.py  pyproject.toml  thermal_control.py
backend/: behavior_analyzer.py  calibration.py  face_analyzer.py  pose_analyzer.py  remote_pose_analyzer.py  server.py  thermal_person_analyzer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
gpu_service/: clip_runtime.py  main.py  pose_runtime.py  pyproject.toml  temperature.py  vlm_runtime.py
gpu_service/lib/: TemperatureCalculator.h
scripts/: measure_matching.py
