[project]
name = "heatsight"
version = "0.1.0"
description = "RGB + 열화상 듀얼 카메라로 사람을 직접 보고 HVAC을 개인 맞춤 제어하는 시스템"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pyserial>=3.5",
    "mediapipe>=0.10.35",
    "httpx>=0.28.1",
]

[tool.uv]
package = false
